<resources>
    <string name="app_name">Go Sno</string>
    <string name="about">About</string>
    <string name="trace_snow">Trace snow</string>
    <string name="general_info">General info</string>
    <string name="home">Home</string>
    <string name="accommodation">Accommodation</string>
    <string name="hotel_cims">Hotel Cims</string>
    <string name="hotel_avanti">Hotel Avanti</string>
    <string name="contacts">Contacts</string>
    <string name="pranas_gataveckas">Pranas Gataveckas</string>
    <string name="phone_number">+370 679 31214</string>
    <string name="vaidas">Vaidas Kriščeliūnas</string>
    <string name="rokas">Rokas Jasonas</string>
    <string name="we_go">WE GO</string>
    <string name="antanas">Antanas Šaulys</string>
    <string name="tinder">Tinder</string>
</resources>
